# tcc-ufsm-2020

./: Cargo.toml  LICENSE  README.md
not_code/: dungeon_table_notes
raws/: colors.ron  items.ron  raws.ron
resources/raws/: colors.ron  raws.ron
resources/rex/: small_5x4.xp  wfc_15x15.xp  wfc_20x20_1.xp  wfc_20x20_2.xp
rex_resources/: dungeon02_80x60.xp  wfc_20x18.xp  wfc_6x6_2.xp
src/: common.rs  components.rs  input.rs  killer.rs  log.rs  main.rs  player.rs  rawloader.rs  renderer.rs  rexloader.rs  spawner.rs  state.rs
src/map_gen/: bsp_tree.rs  cave.rs  cellular_automata.rs  common.rs  custom_region.rs  digger.rs  map.rs  mod.rs  prefab_map.rs  prefab_section.rs  random_map.rs  random_walk.rs  region.rs  room.rs  tile.rs
src/map_gen/wfc/: cell.rs  common.rs  mod.rs  wave.rs
src/raws/: container_structs.rs  item_structs.rs  mob_structs.rs  mod.rs  rawmaster.rs
src/systems/: ai.rs  consumable.rs  damage.rs  equipment.rs  fov.rs  inventory.rs  item_collect.rs  item_drop.rs  mapping.rs  melee.rs  melee_combat.rs  missile.rs  mod.rs  visibility.rs  weapon_reload.rs
src/ui/: common.rs  container.rs  equipment.rs  hud.rs  inventory.rs  menu.rs  mod.rs  tooltips.rs
src/utils/: colors.rs  directions.rs  distance.rs  mod.rs
