[package]
name = "tcc-ufsm-2020"
version = "0.1.0"
authors = ["pprobst <pprobst@insiberia.net>"]
edition = "2018"

[dependencies]
bracket-lib = { version = "0.7.0", features = ["specs"] }
specs = { version = "0.16.1", features = ["specs-derive"] }
crossterm = { version = "0.16.0", optional = true }

[features]
crosst = [ "crossterm" ]
