[package]
name = "tcc-ufsm-2020"
version = "0.1.0"
authors = ["pprobst <pprobst@insiberia.net>"]
edition = "2018"
keywords = ["game", "roguelike"]
categories = ["games"]

[dependencies]
bracket-lib = { git = "https://github.com/thebracket/bracket-lib", optional = true, default-features = false, features = ["threaded", "specs"] }
specs = { version = "0.16.1", features = ["specs-derive"] }

[features]
default = ["bracket-lib/opengl"]
console = ["bracket-lib/crossterm"]
